--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>AngularLeaflet</title>
-  <base href="/angular_leaflet">
+  <base href="./">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.f24e73abbf0be289.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.f24e73abbf0be289.css"></noscript></head>
